--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   easy_search_bar: ^2.4.2
   mysql1: ^0.20.0
   flutter_rating_bar: ^4.0.1
+  crypt: ^4.2.1
+  hash: ^1.0.4
+  crypto: ^3.0.2
 
 dev_dependencies:
   flutter_test:
