--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   hash: ^1.0.4
   crypto: ^3.0.2
   charts_flutter: ^0.12.0
+  pie_chart: ^5.3.2
 
 dev_dependencies:
   flutter_test:
