--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   charts_flutter: ^0.12.0
   pie_chart: ^5.3.2
   mysql_client: ^0.0.27
+  ffi: ^2.0.1
 
 dev_dependencies:
   flutter_test:
